--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=80
+spring.thymeleaf.
 #spring.datasource.url=jdbc:mysql://localhost:3306/tictactoe2
 #spring.datasource.username=root
 #spring.datasource.password=Executable@1
